<resources>
    <string name="app_name">Soundboard</string>
    <string name="c">c</string>
    <string name="csh">c♯</string>
    <string name="d">d</string>
    <string name="dsh">d♯</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="fsh">f♯</string>
    <string name="g">g</string>
    <string name="gsh">g♯</string>
    <string name="a">a</string>
    <string name="ash">a♯</string>
    <string name="b">b</string>
    <string name="song1">Song 1</string>
    <string name="scale">B♭ Major Scale</string>
    <string name="record">record</string>
    <string name="play">play</string>
</resources>
